--- a/ss07_website_layout_design/exercise/exercise_7_4/exercise_7_4.css
+++ b/ss07_website_layout_design/exercise/exercise_7_4/exercise_7_4.css
@@ -6,6 +6,7 @@
 
 [class*="col-"] {
     float: left;
+    width: 100%;
 }
 
 .row::after {
@@ -29,7 +30,7 @@ html {
     line-height: 30px;
     background: #f5f5f5;
     text-align: center;
-    margin: 0 10px;
+    margin: 0 10px 5px;
 }
 
 #header-link a{
@@ -41,31 +42,29 @@ html {
     color: gray;
 }
 
-.left{
-    background: #f8f8ff;
-}
-
-.left iframe{
+iframe{
+    position: absolute;
     width: 100%;
+    height: 100%;
+    border: 0;
     padding: 10px;
 }
-.left li p{
-    padding: 0 10px 20px;
+
+.left a{
     text-decoration: none;
+    color: black;
 }
 
-.right iframe{
-    width: 100%;
-    height: 400px;
-    padding: 10px;
-}
-
-.right p{
-    padding: 10px;
+.right p, .left p{
+    padding: 0 10px 20px;
     text-align: justify;
 }
 
-
+.left div, .right div{
+    position: relative;
+    width: 100%;
+    padding-bottom: 56.25%;
+}
 
 #footer{
     clear: both;
@@ -79,19 +78,8 @@ html {
     line-height: 60px;
 }
 
-@media only screen and (min-width: 400px) {
-    .col-m-1 {width: 8.33%;}
-    .col-m-2 {width: 16.66%;}
-    .col-m-3 {width: 25%;}
-    .col-m-4 {width: 33.33%;}
-    .col-m-5 {width: 41.66%;}
-    .col-m-6 {width: 50%;}
-    .col-m-7 {width: 58.33%;}
-    .col-m-8 {width: 66.66%;}
-    .col-m-9 {width: 75%;}
-    .col-m-10 {width: 83.33%;}
-    .col-m-11 {width: 91.66%;}
-    .col-m-12 {width: 100%;}
+.left{
+    background: #f8f8ff;
 }
 
 @media only screen and (min-width: 768px) {
